syntax = "proto3";

option go_package = "pokestocks/proto/transaction";

package transaction;

message PlaceBuyOrderRequest {
  int64 portfolioId = 1;
  int64 pspId = 2;
  int32 quantity = 3;
}